--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=springtodo
 server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db
